--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node esbuild.js",
+    "dev": "node esbuild.js ",
+    "css": " npx tailwindcss -i ./frontend/main.css  -o ./public/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -46,6 +47,7 @@
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0-rc17",
     "esbuild-sass-plugin": "^2.16.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.302.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
